<resources>
    <string name="app_name">Playlist maker</string>

    <string name="search">Поиск</string>
    <string name="medical_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="new_playlist">Новый плейлист</string>

    <string name="clear">Очистить</string>
    <string name="update">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="user_agreement_uri">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="share_the_app_uri">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="write_to_support_email">Florid95@yandex.ru</string>
    <string name="write_to_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_to_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="search_track_placeholder">Track placeholder</string>
    <string name="search_track_separator">Track Separator</string>
    <string name="search_track_arrow_forward">Arrow forward</string>

    <string name="communication_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_was_found">Ничего не нашлось</string>

    <string name="track_time">Длительность</string>
    <string name="track_collection_name">Альбом</string>
    <string name="track_release_date">Год</string>
    <string name="track_primary_genre_name">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="track_start_time">00:00</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist">Плейлист</string>

    <string name="new_playlist_name">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_image_content_description">Описание</string>
    <string name="new_playlist_create">Создать</string>

    <string name="text_finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="text_all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_complete">Завершить</string>
    <string name="text_yes">Да</string>
    <string name="text_no">Нет</string>
    <string name="text_do_you_want_to_delete_the_track">Хотите удалить трек?</string>
    <string name="text_do_you_want_to_delete_the_playlist">Хотите удалить плейлист %1$s?</string>
    <string name="text_playlist_has_been_created">Плейлист %1$s создан</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>

    <string name="not_tracks_for_shared">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="message_track_already_added_playlist">Трек уже добавлен в плейлист</string>
    <string name="message_track_added_playlist">Добавлено в плейлист</string>

    <string name="tools_search_track_name">Yesterday (Remastered 2009)</string>
    <string name="tools_search_track_artist">The Beatles</string>
    <string name="tools_search_track_time">2:55</string>
    <string name="tools_track_release_date">1965</string>
    <string name="tools_track_primary_genre_name">Rock</string>
    <string name="tools_track_country">Великобритания</string>

    <string name="text_tracks_null">Нет треков</string>
    <plurals name="tracks">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>
