<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_settings_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextAppearance="@style/MainTitleStyle" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher_dark_theme"
        style="@style/SettingButtonStyle"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share_the_app"
        style="@style/SettingButtonStyle"
        android:drawableEnd="@drawable/ic_share_the_app_24"
        android:text="@string/share_the_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/write_to_support"
        style="@style/SettingButtonStyle"
        android:drawableEnd="@drawable/ic_write_to_support_24"
        android:text="@string/write_to_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/user_agreement"
        style="@style/SettingButtonStyle"
        android:drawableEnd="@drawable/ic_user_agreement_24"
        android:text="@string/user_agreement" />
</LinearLayout>
