<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_track"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginVertical="8dp"
    android:layout_marginStart="13dp"
    >
    <ImageView
        android:id="@+id/imTrackIcon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/search_track_placeholder"
        tools:src="@drawable/track_placeholder"
        android:scaleType="centerCrop"
        android:layout_gravity="center_vertical"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tvTrackName"
            style="@style/SearchItemTrack"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:ellipsize="end"
            tools:text="@string/tools_search_track_name"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTrackArtist"
                style="@style/SearchItemTrack"
                tools:text="@string/tools_search_track_artist"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/search_track_separator"
                android:src="@drawable/track_separator"
                android:layout_marginHorizontal="5dp"
                style="@style/SearchItemTrack"
                />
            <TextView
                android:id="@+id/tvTrackTime"
                style="@style/SearchItemTrack"
                tools:text="@string/tools_search_track_time"
                />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/search_track_arrow_forward"
        android:src="@drawable/arrow_track_forward"
        style="@style/SearchItemTrack"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        />
    </LinearLayout>
