<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/audio_player_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_audio_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStartWithNavigation="64dp"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:navigationIconTint="?attr/colorOnPrimary"
            app:titleTextAppearance="@style/MainTitleStyle"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/audio_player_track_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_track_placeholder_312"
            app:layout_constraintTop_toBottomOf="@id/toolbar_audio_player"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            android:layout_marginTop="26dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_track_name"
            tools:text="@string/tools_search_track_name"
            style="@style/SearchPlaceholderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="start"
            android:layout_marginStart="0dp"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@id/audio_player_track_img"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_track_artist"
            tools:text="@string/tools_search_track_artist"
            style="@style/SearchPlaceholderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:layout_marginStart="0dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_track_name"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />

        <ImageView
            android:id="@+id/img_audio_player_track_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_track_play_100"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_track_artist"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintEnd_toEndOf="@id/rightBorder" />

        <ImageView
            android:id="@+id/img_audio_player_track_add_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_playlist_51"
            app:layout_constraintTop_toTopOf="@id/img_audio_player_track_play"
            app:layout_constraintBottom_toBottomOf="@id/img_audio_player_track_play"
            app:layout_constraintStart_toStartOf="@id/leftBorder" />

        <ImageView
            android:id="@+id/img_audio_player_track_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_track_like_51"
            app:layout_constraintTop_toTopOf="@id/img_audio_player_track_play"
            app:layout_constraintBottom_toBottomOf="@id/img_audio_player_track_play"
            app:layout_constraintEnd_toStartOf="@id/rightBorder" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_track_time"
            tools:text="@string/tools_search_track_time"
            style="@style/SearchPlaceholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textFontWeight="500"
            app:layout_constraintEnd_toEndOf="@+id/img_audio_player_track_play"
            app:layout_constraintStart_toStartOf="@+id/img_audio_player_track_play"
            app:layout_constraintTop_toBottomOf="@id/img_audio_player_track_play" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/border_description_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/border_description_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_text_duration"
            android:text="@string/track_time"
            style="@style/AudiPlayerText"

            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_track_time"
            app:layout_constraintStart_toStartOf="@id/border_description_left" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_value_duration"
            tools:text="@string/tools_search_track_time"
            style="@style/AudiPlayerTextDescription"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_audio_player_text_duration"
            app:layout_constraintEnd_toEndOf="@id/border_description_right"
            app:layout_constraintStart_toEndOf="@id/tv_audio_player_text_duration" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_text_album"
            android:text="@string/track_collection_name"
            style="@style/AudiPlayerText"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_text_duration"
            app:layout_constraintStart_toStartOf="@id/border_description_left" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_value_album"
            tools:text="@string/tools_search_track_name"
            android:layout_width="0dp"
            style="@style/AudiPlayerTextDescription"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_audio_player_text_album"
            app:layout_constraintEnd_toEndOf="@id/border_description_right"
            app:layout_constraintStart_toEndOf="@id/tv_audio_player_text_album" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_text_release_date"
            android:text="@string/track_release_date"
            style="@style/AudiPlayerText"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_text_album"
            app:layout_constraintStart_toStartOf="@id/border_description_left" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_value_release_date"
            tools:text="@string/tools_track_release_date"
            style="@style/AudiPlayerTextDescription"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_audio_player_text_release_date"
            app:layout_constraintEnd_toEndOf="@id/border_description_right"
            app:layout_constraintStart_toEndOf="@id/tv_audio_player_text_release_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_text_genre"
            android:text="@string/track_primary_genre_name"
            style="@style/AudiPlayerText"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_text_release_date"
            app:layout_constraintStart_toStartOf="@id/border_description_left" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_value_genre"
            tools:text="@string/tools_track_primary_genre_name"
            style="@style/AudiPlayerTextDescription"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_audio_player_text_genre"
            app:layout_constraintEnd_toEndOf="@id/border_description_right"
            app:layout_constraintStart_toEndOf="@id/tv_audio_player_text_genre" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_text_country"
            android:text="@string/track_country"
            style="@style/AudiPlayerText"
            app:layout_constraintTop_toBottomOf="@id/tv_audio_player_text_genre"
            app:layout_constraintStart_toStartOf="@id/border_description_left" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_audio_player_value_country"
            tools:text="@string/tools_track_country"
            style="@style/AudiPlayerTextDescription"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_audio_player_text_country"
            app:layout_constraintEnd_toEndOf="@id/border_description_right"
            app:layout_constraintStart_toEndOf="@id/tv_audio_player_text_country" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
