<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_playlist_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playlistCreate.ui.PlaylistCreateFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_create_playlist"
        app:title="@string/new_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="64dp"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:titleTextAppearance="@style/MainTitleStyle"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="26dp"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_playlist"
        app:cardElevation="0dp"
        app:cardCornerRadius="8dp"
        >

        <ImageView
            android:id="@+id/img_create_playlist_add_photo"
            android:background="@drawable/bg_add_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/new_playlist_image_content_description"
            android:scaleType="center"
            android:src="@drawable/ic_add_photo_100" />
    </androidx.cardview.widget.CardView>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/TextInputEditTextStyle"
        android:hint="@string/new_playlist_name"
        android:layout_marginTop="33dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputEditTextStyle"
        android:hint="@string/new_playlist_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        android:layout_marginTop="17dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_playlist_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/yp_text_gray"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="8dp"
        android:text="@string/new_playlist_create"
        android:textAllCaps="false"
        android:textColor="@color/yp_white"
        android:textFontWeight="500"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="16sp"
        android:letterSpacing="0"
        android:stateListAnimator="@null"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>