<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStartWithNavigation="64dp"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:title="@string/search"
        app:titleTextAppearance="@style/MainTitleStyle"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        style="@style/SearchBackground"
        >
        <EditText
            android:id="@+id/input_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:hint="@string/search"
            android:inputType="text"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp"
            android:textFontWeight="400"
            android:lines="1"
            android:maxLength="30"
            android:background="@null"
            android:drawablePadding="8dp"
            android:paddingVertical="8.5dp"
            android:paddingHorizontal="12dp"
            style="@style/SearchEditTextColors"
            />
        <ImageView
            android:id="@+id/button_clear_search"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:contentDescription="@string/clear"
            android:src="@drawable/ic_clear_16"
            android:paddingHorizontal="12dp"
            android:visibility="gone"
            style="@style/SearchEditTextColors"
            />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:visibility="visible"
            />
        <LinearLayout
            android:id="@+id/message_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="110dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <ImageView
                android:id="@+id/message_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                />
            <TextView
                android:id="@+id/message_text"
                style="@style/SearchPlaceholderText"
                />
            <Button
                android:id="@+id/message_button"
                android:text="@string/update"
                style="@style/ButtonStyle"
                />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
